--- a/src/content/css/sound-board.css
+++ b/src/content/css/sound-board.css
@@ -1,16 +1,12 @@
 .sound-bite-container{
     font-size: 1rem;
     margin:0 auto;
-    background: white;
-    max-height: 800px;
-    height: 80vh;
     width: 100%;
 }
 
-.sound-bite-container .catergory-selector-wrapper,
-.sound-bite-container .sound-bites-box-wrapper{
-   width: 100%;
-   overflow: auto;
+.sound-bite-container .category-selector{
+    position: relative;
+    background: white;
 }
 
 .sound-bite-container .selected-category{
@@ -34,6 +30,10 @@
     border: 0.2rem solid black;
     border-top: none;
     overflow: auto;
+    max-height: 50vh;
+    position: absolute;
+    width: 100%;
+    background: white;
 }
 
  .sound-bite-container .category-list.closed{
@@ -51,31 +51,36 @@
     background: #81cfe0;
 }
 
-.sound-bite-container .category-list:hover .category-list-item{
-    background:none;
-}
-
-.sound-bite-container .category-list .category-list-item:hover{
+.sound-bite-container .category-list .category-list-item.selected:hover{
     background: #81cfe0;
 }
 
+.sound-bite-container .category-list .category-list-item:hover{
+    background: #c5eff7;
+}
+
 .sound-bite-container .sound-bites-box{
-    display: block;
-    /* display: flex;
-    flex-wrap: wrap; */
+    display: flex;
+    flex-wrap: wrap;
     border: 0.2rem solid black;
     border-top: none;
     width: 100%;
+    height: 70vh;
+    overflow: auto;
+    background: white;
 }
 
 .sound-bite-container .sound-bites-box .sound-bite{
+    flex:0 0 46%;
+    height: 50px;
+    margin: 2%;
     display: block;
-    width: 100%;
     font-weight: bold;
     background:var(--diamond-black);
     box-shadow: 0 1px 0 rgba(0,0,0,.15);
-    height: auto;
     text-overflow: ellipsis;
+    overflow: hidden;
+    padding: 0.5em;
 }
 
 .sound-bite-container .sound-bites-box .sound-bite:hover {
@@ -87,33 +92,42 @@
       display: flex;
     }
 
-    .sound-bite-container .catergory-selector-wrapper{
-  flex: 1;
-  border: 0.2rem solid black;
-}
-.sound-bite-container .sound-bites-box-wrapper{
-    flex:2;
-    border: 0.2rem solid black;
-    border-left: 0;
-  }
-  .sound-bite-container .selected-category{
+    .sound-bite-container .category-selector{
+        flex:  0 0 320px;
+        height: 80vh;
+        width: 420px;
+        border: 4px solid black;
+      }
+
+.sound-bite-container .selected-category{
     border: none;
     display: none;
 }
 .sound-bite-container .category-list{
     border: none;
+    position: initial;
+    width: auto;
+    background: none;
 }
 .sound-bite-container .category-list.closed{
     display: block;
 }
     .sound-bite-container .sound-bites-box{
+        flex: 1 1 742px;
         display: flex;
         flex-wrap: wrap;
-        border:none;
+        align-content: flex-start;
+        border:  4px solid black;
+        border-left: 0;
+       padding: 10px;
+       height: 80vh;
+       max-height: 80vh;
+       max-width: 744px;
     }
     .sound-bite-container .sound-bites-box .sound-bite{
          flex:0 0 100px;
+         width:100px;
          height: 100px; 
-         margin: 1em;
+         margin: 10px;
     }
 }
