--- a/src/content/css/experiment.css
+++ b/src/content/css/experiment.css
@@ -87,13 +87,9 @@
     animation: unset;
 }
 
-.experiments-wrapper .nes-mario {
-    transition: 3s;
-    position: relative;
-}
-
 .experiments-wrapper .experiment:hover .nes-mario {
-    bottom: 20%;
+    transition: 1s;
+    transform: rotate(45deg);
 }
 
 .experiments-wrapper  .cloud-wrapper{
