--- a/src/content/css/sound-board.css
+++ b/src/content/css/sound-board.css
@@ -82,6 +82,7 @@
     height: 70vh;
     overflow: auto;
     background: #2e3131;
+    touch-action: manipulation;
 }
 
 .sound-bite-container .sound-bites-box .sound-bite {
