--- a/src/content/css/main.css
+++ b/src/content/css/main.css
@@ -90,7 +90,7 @@ p {
     display: flex;
     justify-content: center;
     align-items: center;
-    height: calc(100vh);
+    height: calc(100vh -56px);
 }
 
 .center-text {
@@ -128,6 +128,7 @@ p {
     transition: 0.5s;
     cursor: pointer;
     font-family: SpaceGrotesk;
+    font-size: 1em;
     src: url("../fonts/SpaceGrotesk-Regular.woff2") format("woff2");
 }
 
