--- a/src/content/css/main.css
+++ b/src/content/css/main.css
@@ -14,10 +14,12 @@
     --diamond-green: #66CC99;
     --diamond-black: #4D4D4D;
 }
-html{
+
+html {
     font-family: SpaceGrotesk, sans-serif !important;
     font-size: 18px;
 }
+
 body {
     background: var(--default-background);
     margin: 0;
@@ -33,16 +35,16 @@ p {
     margin-bottom: 0;
 }
 
-.page{
+.page {
     margin-top: 3rem;
 }
 
-.margin-top-default{
+.margin-top-default {
     margin-top: 1rem;
 }
 
 .content {
-    padding-top:56px; 
+    padding-top: 56px;
 }
 
 .hidden {
@@ -63,7 +65,7 @@ p {
     margin: 0 auto;
 }
 
-.wrap{
+.wrap {
     display: flex;
     flex-wrap: wrap;
 }
@@ -74,7 +76,7 @@ p {
     justify-content: center;
 }
 
-.center-wrapper-group{
+.center-wrapper-group {
     display: flex;
     align-items: center;
     justify-content: center;
@@ -109,7 +111,7 @@ p {
     justify-content: space-between;
 }
 
-.full-page{
+.full-page {
     height: 100vh;
     width: 100vw;
 }
@@ -170,38 +172,73 @@ p {
     color: #bfbfbf;
 }
 
-.next h1{
+.next h1 {
     margin-top: 4em;
 }
 
-.rotate{
+.rotate {
     animation: rotate;
     animation-duration: 2s;
 }
+
+.arrow {
+    border: solid black;
+    border-width: 0 10px 10px 0;
+    display: inline-block;
+    padding: 10px;
+    cursor: pointer;
+}
+
+.arrow:hover {
+    cursor: pointer;
+}
+
+.arrow.right {
+    transform: rotate(-45deg);
+}
+
+.arrow.left {
+    transform: rotate(135deg);
+}
+
+.arrow.up {
+    transform: rotate(-135deg);
+}
+
+.arrow.down {
+    transform: rotate(45deg);
+}
+
+
 
 @media(max-width:767px) {
     body {
         font-size: 16px;
     }
-    .page{
+
+    .page {
         margin-top: 2rem;
     }
-    .content{
+
+    .content {
         padding-top: 40px;
     }
+
     .center-page-wrapper {
         height: calc(100vh -40px);
     }
-    .hidden-xs{
+
+    .hidden-xs {
         visibility: hidden;
     }
 }
 
-@keyframes rotate{
-    from{
+@keyframes rotate {
+    from {
         transform: rotate(0deg);
     }
-    to{
+
+    to {
         transform: rotate(360deg);
     }
 }
