--- a/src/content/css/village.css
+++ b/src/content/css/village.css
@@ -7,4 +7,11 @@
     height: 80vh;
     width:90vw;
     border:2px solid black;
+    background: #fff;
+    overflow: hidden;
+}
+
+.village.disabled{
+    pointer-events:none;
+    opacity: 0.5;
 }
