--- a/src/content/css/villager.css
+++ b/src/content/css/villager.css
@@ -4,10 +4,11 @@
     align-items: center;
     width: 100px;
     height: 150px;
-    /* position: absolute; */
-    position: relative;
-    transition: 5s;
-    z-index: 1
+    z-index: 1;
+}
+
+.villager.move {
+    position: absolute;
 }
 
 .villager .head {
@@ -20,13 +21,13 @@
     align-items: flex-end;
 }
 
-.villager .hair{
+.villager .hair {
     background: yellow;
     position: absolute;
-    z-index: -1;
     top: 0;
     border: 4px solid black;
     border-bottom: none;
+    z-index: -1
 }
 
 .villager .hair.short {
@@ -34,10 +35,42 @@
     height: 20%;
 }
 
+.villager .hair.quiff, .villager .hair.quiff-side {
+    width: 70%;
+    height: 20%;
+}
+
+.villager .hair.quiff+.face .fringe,
+.villager .hair.quiff-side+.face .fringe {
+    z-index: 1;
+    height: 35%;
+    width: 75%;
+    left: 13%;
+    position: absolute;
+    top: -52%;
+    border: 4px solid #000;
+    border-bottom: none;
+}
+
+.villager .hair.quiff-side+.face .fringe {
+    left: 32%;
+}
+
 .villager .hair.mo-hawk {
     width: 20%;
     height: 20%;
 }
+
+.villager .hair.billy-talent+.face .fringe {
+    z-index: 1;
+    height: 87%;
+    width: 114%;
+    left: -7%;
+    position: absolute;
+    top: -84%;
+    border: 4px solid #000;
+}
+
 
 .villager .hair.long {
     width: 100%;
@@ -45,10 +78,41 @@
     border-bottom: 4px solid black;
 }
 
-.villager .hair.medium {
+.villager .hair.long+.face .fringe {
+    z-index: 1;
+    height: 30%;
+    width: 100%;
+    position: absolute;
+    top: -12%;
+    border-bottom: 4px solid black;
+}
+
+.villager .hair.medium, .villager .hair.medium-alternative{
     width: 100%;
     height: 120%;
     border-bottom: 4px solid black;
+}
+
+.villager .hair.medium-alternative+.face .fringe {
+    z-index: 1;
+    height: 82%;
+    width: 61%;
+    position: absolute;
+    top: -18%;
+    left: -13%;
+    border-bottom: 4px solid #000;
+    border-right: 4px solid #000;
+}
+
+.villager .hair.medium+.face .fringe {
+    z-index: 1;
+    height: 46%;
+    width: 74%;
+    position: absolute;
+    top: -27%;
+    left: -7%;
+    border-bottom: 4px solid #000;
+    border-right: 4px solid #000;
 }
 
 .villager .hair.medium-short {
@@ -57,12 +121,24 @@
     border-bottom: 4px solid black;
 }
 
+.villager .hair.medium-short+.face .fringe {
+    z-index: 1;
+    height: 38%;
+    width: 114%;
+    position: absolute;
+    top: -25%;
+    left: -7%;
+    border-bottom: 4px solid #000;
+    border-right: 4px solid #000;
+}
 
 .villager .hair.perm {
-    width: 95%;
-    height: 70%;
+    z-index: 1;
+    width: 82%;
+    height: 38%;
     border-bottom: 4px solid black;
 }
+
 
 .villager .hair.buzz {
     width: 80%;
@@ -77,6 +153,7 @@
     background: white;
     border: 4px solid black;
     border-bottom: 0;
+    position: relative;
 }
 
 .villager .face .eyes {
@@ -193,7 +270,9 @@
 
 
 
-
+.villager.walking{
+    transition: 5s;
+}
 
 
 
@@ -211,14 +290,14 @@
     animation-duration: 2s;
 }
 
-.villager.walking .legs .leg:first-child{
+.villager.walking .legs .leg:first-child {
     animation: walking;
     animation-iteration-count: infinite;
     animation-timing-function: linear;
     animation-duration: 0.5s;
 }
 
-.villager.walking .legs .leg:last-child{
+.villager.walking .legs .leg:last-child {
     animation: walking;
     animation-iteration-count: infinite;
     animation-timing-function: linear;
@@ -247,12 +326,14 @@
         border-right: 4px solid black;
         left: 5%;
     }
+
     25% {
         position: relative;
         transform: rotate(-10deg);
         left: 5%;
         border-right: 4px solid black;
     }
+
     50% {
         position: relative;
         transform: rotate(0deg);
@@ -260,6 +341,7 @@
         border-right: 4px solid black;
         left: 5%;
     }
+
     75% {
         position: relative;
         transform: rotate(10deg);
@@ -267,6 +349,7 @@
         border-right: 4px solid black;
         left: 5%;
     }
+
     100% {
         position: relative;
         transform: rotate(0deg);
@@ -284,24 +367,28 @@
         border-left: 4px solid black;
         right: 5%;
     }
+
     25% {
         position: relative;
         transform: rotate(-10deg);
         right: 5%;
         border-left: 4px solid black;
     }
+
     50% {
         position: relative;
         transform: rotate(0deg);
         border-left: 4px solid black;
         right: 5%;
     }
+
     75% {
         position: relative;
         transform: rotate(10deg);
         border-left: 4px solid black;
         right: 5%;
     }
+
     100% {
         position: relative;
         transform: rotate(0deg);
@@ -310,19 +397,35 @@
     }
 }
 
-
 .villager.side-on .head {
     width: 100%;
     height: 50%;
-  
 }
+
 .villager.side-on .hair {
     z-index: 1;
 }
 
+.villager.side-on .hair+.face .fringe {
+    display: none;
+}
+
+
+.villager.side-on .hair.quiff+.face .fringe,
+.villager.side-on .hair.quiff-side+.face .fringe {
+    display: block;
+    left: 32%;
+}
+
+
+
 .villager.side-on .hair.mo-hawk {
     width: 40%;
     height: 20%;
+}
+
+.villager.side-on .hair.billy-talent+.face .fringe {
+    display: block;
 }
 
 .villager.side-on .hair.long {
@@ -331,7 +434,7 @@
     border-bottom: 4px solid black;
 }
 
-.villager.side-on .hair.medium{
+.villager.side-on .hair.medium {
     width: 70%;
     height: 120%;
     border-bottom: 4px solid black;
@@ -344,8 +447,8 @@
 }
 
 .villager.side-on .hair.perm {
-    width: 80%;
-    height: 70%;
+    width: 82%;
+    height: 38%;
     border-bottom: 4px solid black;
 }
 
@@ -362,11 +465,10 @@
     width: 70%;
     background: white;
     border: 4px solid black;
-    border-bottom: 0;
 }
 
 .villager.side-on .face .eyes {
-   display: none;
+    display: none;
 }
 
 .villager.side-on .upper-body {
@@ -386,14 +488,14 @@
     border-right: 4px solid black;
     position: absolute;
     z-index: 2;
-    top:0;
+    top: 0;
 }
 
 .villager.side-on .arm:last-child {
     border-right: 4px solid black;
     position: absolute;
     z-index: -2;
-    top:0;
+    top: 0;
 }
 
 
@@ -420,12 +522,12 @@
 .villager.side-on .legs .leg:first-child {
     z-index: 1;
     position: absolute;
-    top:0;
+    top: 0;
 }
 
 .villager.side-on .legs .leg {
     position: absolute;
-    top:0;
+    top: 0;
 }
 
 .villager.side-on .legs .shoe {
@@ -449,14 +551,14 @@
     animation-delay: 1s;
 }
 
-.villager.side-on.walking .legs .leg:first-child{
+.villager.side-on.walking .legs .leg:first-child {
     animation: side-on-walking;
     animation-iteration-count: infinite;
     animation-timing-function: linear;
     animation-duration: 1s;
 }
 
-.villager.side-on.walking .legs .leg:last-child{
+.villager.side-on.walking .legs .leg:last-child {
     animation: side-on-walking;
     animation-iteration-count: infinite;
     animation-timing-function: linear;
@@ -466,19 +568,23 @@
 
 @keyframes side-on-walking-arms {
     0% {
-        
+
         transform: rotate(0deg);
-        
+
     }
+
     25% {
         transform: rotate(90deg);
     }
+
     50% {
         transform: rotate(0deg);
     }
+
     75% {
         transform: rotate(-90deg);
     }
+
     100% {
         transform: rotate(0deg);
     }
@@ -486,19 +592,23 @@
 
 @keyframes side-on-walking {
     0% {
-        
+
         transform: rotate(0deg);
-        
+
     }
+
     25% {
         transform: rotate(5deg);
     }
+
     50% {
         transform: rotate(0deg);
     }
+
     75% {
         transform: rotate(-5deg);
     }
+
     100% {
         transform: rotate(0deg);
     }
@@ -506,8 +616,13 @@
 
 .villager.backwards .face .eyes {
     display: none;
- }
+}
 
- .villager.backwards .hair{
+.villager.backwards .hair {
     z-index: 2;
- }
+}
+
+
+.villager.backwards .hair.billy-talent{
+    border:none
+}
