--- a/src/content/css/villager.css
+++ b/src/content/css/villager.css
@@ -13,7 +13,7 @@
     position: absolute;
     top: -32%;
     margin: 0;
-    border: 4px solid black;
+    border: 2px solid black;
     border-radius: 100px;
     padding: 0.2em 0.5em;
     background: #fff;
@@ -32,6 +32,9 @@
 }
 .villager.move {
     position: absolute;
+}
+.villager.move:hover, .villager.move:active{
+    z-index: 10;
 }
 
 .villager.move:hover h2, .villager.move:active h2{
@@ -52,7 +55,7 @@
     background: yellow;
     position: absolute;
     top: 0;
-    border: 4px solid black;
+    border: 2px solid black;
     border-bottom: none;
     z-index: -1
 }
@@ -75,12 +78,12 @@
     left: 13%;
     position: absolute;
     top: -52%;
-    border: 4px solid #000;
+    border: 2px solid #000;
     border-bottom: none;
 }
 
 .villager .hair.quiff-side+.face .fringe {
-    left: 32%;
+    left: 28%;
 }
 
 .villager .hair.mo-hawk {
@@ -91,18 +94,18 @@
 .villager .hair.billy-talent+.face .fringe {
     z-index: 1;
     height: 87%;
-    width: 114%;
-    left: -7%;
+    width: 106%;
+    left: -3%;
     position: absolute;
     top: -84%;
-    border: 4px solid #000;
+    border: 2px solid #000;
 }
 
 
 .villager .hair.long {
     width: 100%;
     height: 170%;
-    border-bottom: 4px solid black;
+    border-bottom: 2px solid black;
 }
 
 .villager .hair.long+.face .fringe {
@@ -111,13 +114,13 @@
     width: 100%;
     position: absolute;
     top: -12%;
-    border-bottom: 4px solid black;
+    border-bottom: 2px solid black;
 }
 
 .villager .hair.medium, .villager .hair.medium-alternative{
     width: 100%;
     height: 120%;
-    border-bottom: 4px solid black;
+    border-bottom: 2px solid black;
 }
 
 .villager .hair.medium-alternative+.face .fringe {
@@ -127,8 +130,8 @@
     position: absolute;
     top: -18%;
     left: -13%;
-    border-bottom: 4px solid #000;
-    border-right: 4px solid #000;
+    border-bottom: 2px solid #000;
+    border-right: 2px solid #000;
 }
 
 .villager .hair.medium+.face .fringe {
@@ -138,14 +141,14 @@
     position: absolute;
     top: -27%;
     left: -7%;
-    border-bottom: 4px solid #000;
-    border-right: 4px solid #000;
+    border-bottom: 2px solid #000;
+    border-right: 2px solid #000;
 }
 
 .villager .hair.medium-short {
     width: 100%;
     height: 95%;
-    border-bottom: 4px solid black;
+    border-bottom: 2px solid black;
 }
 
 .villager .hair.medium-short+.face .fringe {
@@ -155,22 +158,22 @@
     position: absolute;
     top: -25%;
     left: -7%;
-    border-bottom: 4px solid #000;
-    border-right: 4px solid #000;
+    border-bottom: 2px solid #000;
+    border-right: 2px solid #000;
 }
 
 .villager .hair.perm {
     z-index: 1;
     width: 82%;
     height: 38%;
-    border-bottom: 4px solid black;
+    border-bottom: 2px solid black;
 }
 
 
 .villager .hair.buzz {
     width: 80%;
     height: 40%;
-    border-bottom: 4px solid black;
+    border-bottom: 2px solid black;
     top: 12%;
 }
 
@@ -178,7 +181,7 @@
     height: 80%;
     width: 70%;
     background: white;
-    border: 4px solid black;
+    border: 2px solid black;
     border-bottom: 0;
     position: relative;
 }
@@ -214,7 +217,7 @@
 .villager .arm {
     height: 90%;
     width: 20%;
-    border: 4px solid black;
+    border: 2px solid black;
 }
 
 .villager .arm .sleeve {
@@ -233,14 +236,14 @@
 .villager .arm .forearm {
     height: 60%;
     background: white;
-    border-top: 4px solid black;
+    border-top: 2px solid black;
 }
 
 .villager .torso {
     height: 100%;
     width: 60%;
     background: blue;
-    border: 4px solid black;
+    border: 2px solid black;
     border-bottom: none;
 }
 
@@ -259,7 +262,7 @@
     height: 60%;
     width: 100%;
     background: brown;
-    border: 4px solid black;
+    border: 2px solid black;
     border-bottom: none;
 }
 
@@ -274,7 +277,7 @@
 .villager .legs .shoe {
     height: 40%;
     background: black;
-    border: 4px solid black;
+    border: 2px solid black;
 }
 
 
@@ -369,7 +372,7 @@
     0% {
         position: relative;
         transform: rotate(0deg);
-        border-right: 4px solid black;
+        border-right: 2px solid black;
         left: 5%;
     }
 
@@ -377,14 +380,14 @@
         position: relative;
         transform: rotate(-10deg);
         left: 5%;
-        border-right: 4px solid black;
+        border-right: 2px solid black;
     }
 
     50% {
         position: relative;
         transform: rotate(0deg);
         left: 0%;
-        border-right: 4px solid black;
+        border-right: 2px solid black;
         left: 5%;
     }
 
@@ -392,7 +395,7 @@
         position: relative;
         transform: rotate(10deg);
         left: 0%;
-        border-right: 4px solid black;
+        border-right: 2px solid black;
         left: 5%;
     }
 
@@ -400,7 +403,7 @@
         position: relative;
         transform: rotate(0deg);
         left: 0%;
-        border-right: 4px solid black;
+        border-right: 2px solid black;
         left: 5%;
     }
 }
@@ -410,7 +413,7 @@
     0% {
         position: relative;
         transform: rotate(0deg);
-        border-left: 4px solid black;
+        border-left: 2px solid black;
         right: 5%;
     }
 
@@ -418,27 +421,27 @@
         position: relative;
         transform: rotate(-10deg);
         right: 5%;
-        border-left: 4px solid black;
+        border-left: 2px solid black;
     }
 
     50% {
         position: relative;
         transform: rotate(0deg);
-        border-left: 4px solid black;
+        border-left: 2px solid black;
         right: 5%;
     }
 
     75% {
         position: relative;
         transform: rotate(10deg);
-        border-left: 4px solid black;
+        border-left: 2px solid black;
         right: 5%;
     }
 
     100% {
         position: relative;
         transform: rotate(0deg);
-        border-left: 4px solid black;
+        border-left: 2px solid black;
         right: 5%;
     }
 }
@@ -477,31 +480,31 @@
 .villager.side-on .hair.long {
     width: 70%;
     height: 170%;
-    border-bottom: 4px solid black;
+    border-bottom: 2px solid black;
 }
 
 .villager.side-on .hair.medium {
     width: 70%;
     height: 120%;
-    border-bottom: 4px solid black;
+    border-bottom: 2px solid black;
 }
 
 .villager.side-on .hair.medium-short {
     width: 70%;
     height: 95%;
-    border-bottom: 4px solid black;
+    border-bottom: 2px solid black;
 }
 
 .villager.side-on .hair.perm {
     width: 82%;
     height: 38%;
-    border-bottom: 4px solid black;
+    border-bottom: 2px solid black;
 }
 
 .villager.side-on .hair.buzz {
     width: 70%;
     height: 40%;
-    border-bottom: 4px solid black;
+    border-bottom: 2px solid black;
     top: 12%;
 }
 
@@ -510,7 +513,7 @@
     height: 80%;
     width: 70%;
     background: white;
-    border: 4px solid black;
+    border: 2px solid black;
 }
 
 .villager.side-on .face .eyes {
@@ -527,18 +530,18 @@
 .villager.side-on .arm {
     height: 90%;
     width: 20%;
-    border: 4px solid black;
+    border: 2px solid black;
 }
 
 .villager.side-on .arm:first-child {
-    border-right: 4px solid black;
+    border-right: 2px solid black;
     position: absolute;
     z-index: 2;
     top: 0;
 }
 
 .villager.side-on .arm:last-child {
-    border-right: 4px solid black;
+    border-right: 2px solid black;
     position: absolute;
     z-index: -2;
     top: 0;
@@ -549,7 +552,7 @@
     height: 100%;
     width: 40%;
     background: blue;
-    border: 4px solid black;
+    border: 2px solid black;
     border-bottom: none;
     border-top: none;
 }
@@ -580,7 +583,7 @@
 .villager.side-on .legs .shoe {
     height: 40%;
     background: black;
-    border: 4px solid black;
+    border: 2px solid black;
 }
 
 .villager.side-on.walking .arm:first-child {
