--- a/src/content/css/experiment.css
+++ b/src/content/css/experiment.css
@@ -9,6 +9,10 @@
     text-align: center;
 }
 
+.experiments-wrapper a{
+    margin-top: 4em;
+}
+
 .experiments-wrapper .experiment {
     width: 283px;
     justify-content: center;
@@ -18,7 +22,14 @@
 }
 
 .experiments-wrapper h2 {
-    margin-top: 2em;
+    border-bottom: 0.1em solid black;
+    display: inline;
+}
+
+.experiments-wrapper a:hover h2{
+    transition: 0.5s;
+    color: #0984e3;
+    border-bottom: 0.1em solid #0984e3;
 }
 
 .experiments-wrapper .experiment.diamond-experiment {
